k3s/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  defaultBackend:
    service:
      name: longhorn-frontend
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
      - longhorn
---
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8000
  type: ClusterIP
  selector:
    app: longhorn-ui
